--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "deskapp",
   "version": "0.0.0",
-  "dependencies": {},
+  "dependencies": {
+    "angular-leaflet-directive": "^0.7.11"
+  },
   "repository": {},
   "devDependencies": {
     "grunt": "^0.4.5",
