--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "angular-sanitize": "^1.3.0",
     "angular-touch": "^1.3.0",
     "angular-local-storage": "~0.1.5",
-    "angularjs-geolocation": "~0.1.1"
+    "angularjs-geolocation": "~0.1.1",
+    "ngprogress": "~1.0.7"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
