--- a/bower.json
+++ b/bower.json
@@ -12,11 +12,15 @@
     "angular-touch": "^1.3.0",
     "angular-local-storage": "~0.1.5",
     "angularjs-geolocation": "~0.1.1",
-    "ngprogress": "~1.0.7"
+    "ngprogress": "~1.0.7",
+    "angular-bootstrap": "~0.12.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
   },
   "appPath": "app",
-  "moduleName": "deskappApp"
+  "moduleName": "deskappApp",
+  "resolutions": {
+    "angular": "^1.3.0"
+  }
 }
