--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "angular-local-storage": "~0.1.5",
     "angularjs-geolocation": "~0.1.1",
     "ngprogress": "~1.0.7",
-    "angular-bootstrap": "~0.12.1"
+    "angular-bootstrap": "~0.12.1",
+    "ng-videosharing-embed": "~0.3.2"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
