--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "angularjs-geolocation": "~0.1.1",
     "ngprogress": "~1.0.7",
     "angular-bootstrap": "~0.12.1",
-    "ng-videosharing-embed": "~0.3.2"
+    "ng-videosharing-embed": "~0.3.2",
+    "angular-audio": "~1.6.2"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
